http/css/style.less
@import "~bootstrap-less/bootstrap/variables.less";
@import "~bootstrap-less/bootstrap/mixins/grid-framework.less";

* {
    font-family: 'Trebuchet MS', Helvetica, sans-serif;
}

.visprintimp {
  @media print {
    display: block !important;
  }
}

body {
    margin-top: 60px;
}

.fixedfont {
    font-family: Menlo,Monaco,Consolas,Courier New,monospace
}

.introanimation {
    /* TODO make pretty before we show it */
    display: none;
}


/* For three column layout */
.sidebar-nav-fixed {
    width:15%;
    overflow-y: hidden;
}

/* navbar */
.navbar {
    max-height: 100px;
}

.navbar-header {
    width: 100% !important;
}

.navbar img {
    max-height: 60px;
    padding-top: 0px;
}

.navbar-fixed-top {
    height: 60px !important;
    top: 0px !important;
}

.navbar-collapse {
    width: 100% !important;
}

.navbar .navbar-collapse.in {
    max-height: none !important;
}

.navbar-collapse li {
    display: inline-block !important;
}

.inlineblock {
    display: inline-block !important;
}

.inline {
    display: inline !important;
}

.block {
    display: block !important;
}

.bordright {
    border-right: 1px solid lightgrey;
}

.bordleft {
    border-left: 1px solid lightgrey;
}

.hoverDiv {
    background: #fff;
}

.hoverDiv:hover {
    background: #f5f5f5;
}

.hoverDiv.selected {
    background: #f5f5f5;
}

.ddChild {
    min-height: 200px !important;
}

.easeheight {
    -webkit-transition: height 1s ease;
    -moz-transition: height 1s ease;
    -o-transition: height 1s ease;
    -ms-transition: height 1s ease;
    transition: height 1s ease;
}

.text-larger {
    font-weight: bold !important;
    font-size: 20px !important;
}

.topspace {
    margin-top: 10px !important;
}

.tbspace {
    margin-top: 10px !important;
    margin-bottom: 10px !important;
}

.fullholder {
    width: 95% !important;
    position: relative;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.completefull {
    width: 100% !important;
    position: relative;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.fullheight {
    height: 100% !important;
}

.loginbutton {
    height: 22px;
}

.lightgrey {
    color: #d3d3d3;
}

.nolinkcolour {
    color: inherit;
}

/* Allow maps autocomplete to show inside modals */
.pac-container {
    background-color: #FFF;
    z-index: 20;
    position: fixed;
    display: inline-block;
    float: left;
}

.modal-backdrop {
    z-index: 10;
}

.mapcontainer {
    margin: 20px 5px 5px 5px;
}

.maparea {
    width: 100%;
    margin: 0 auto;
}

.mapandresults {
    min-width: 100%;
    margin-top: 20px;
}

.networkicon, .networkicon img {
    width: 40px !important;
    height: 40px !important;
}

.networkiconlarge, .networkiconlarge img {
    width: 150px;
    height: 150px;
}

/* Scrollable tabs */
.nav-tabs {
    overflow-x: auto;
    overflow-y: hidden;
    display: -webkit-box;
    display: -moz-box;
}

nav .nav-tabs>li {
    float:none;
}

.grouplist {
    max-height: 300px;
    overflow: auto;
}

.sidelogo img {
    width: 98%;
}

.logo {
    height: 50px;
}

.modal {
    margin-top: 60px !important;
    overflow-y:auto;
    max-height:90%;
    margin-top:-45%;
    z-index: 1200;
}

.modal-large {
    width: 80% !important;
}

.msgbody {
    max-height: 100px;
    word-wrap: break-word;
    white-space: pre-wrap;
    max-height: 300px;
    overflow-y: auto;
    padding: 5px;
    -webkit-hyphens: auto;
    -moz-hyphens: auto;
    -ms-hyphens: auto;
    hyphens: auto;
}

.msgpic {
    width: 110px;
}

.borderless td, .borderless tr {
    border-style: none !important;
}

.vtop {
    vertical-align: top;
}

.vbottom {
    vertical-align: bottom;
}

.vcenter {
    display: inline-block !important;
    vertical-align: middle !important;
    float: none !important;
}

.vcenter-left {
    display: inline-block !important;
    vertical-align: middle !important;
    float: left !important;
}

.vtop {
    vertical-align: top !important;
}

.dd {
    min-width: 250px !important;
}

.btn-circle {
    width: 30px;
    height: 30px;
    text-align: center;
    padding: 6px 0;
    font-size: 12px;
    line-height: 1.428571429;
    border-radius: 15px;
}
.btn-circle.btn-lg {
    width: 50px;
    height: 50px;
    padding: 10px 16px;
    font-size: 18px;
    line-height: 1.33;
    border-radius: 25px;
}
.btn-circle.btn-xl {
    width: 70px;
    height: 70px;
    padding: 10px 16px;
    font-size: 24px;
    line-height: 1.33;
    border-radius: 35px;
}

.btn-file {
    position: relative;
    overflow: hidden;
}
.btn-file input[type=file] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    font-size: 100px;
    text-align: right;
    filter: alpha(opacity=0);
    opacity: 0;
    outline: none;
    background: white;
    cursor: inherit;
    display: block;
}

.transback {
    background: none !important;
}

.margin {
    margin: 10px;
}

.margright {
    margin-right: 10px;
}

.margleft {
    margin-left: 10px;
}

.margleftsm {
    margin-left: 5px;
}

.margleftlg {
    margin-left: 20px;
}

.margrightsm {
    margin-right: 5px;
}

.margrightlg {
    margin-right: 20px;
}

.margtop {
    margin-top: 20px;
}

.margtopsm {
    margin-top: 10px;
}

.margtopbig {
    margin-top: 50px;
}

.margtopnone {
    margin-top: 0px;
}

.margbotsm {
    margin-bottom: 5px;
}

.margbotmd {
    margin-bottom: 10px;
}

.margbotnone {
    margin-bottom: 0px;
}

.padbotnone {
    padding-bottom: 0px !important;
}

.padbotbit {
    padding-bottom: 50px !important;
}

.menu {
    margin-top: 3px;
    height: 30px;
}

.groupselect {
    width: 105px !important;
    margin-top: 6px;
}

.groupselect img {
    width: 50px !important;
}

.categoryselect {
    margin-top: 6px;
    width: 160px !important;
}

.typeselect {
    margin-top: 6px;
    width: 125px !important;
}

.distselect {
    margin-top: 6px;
    width: 120px !important;
}

.reallyHide {
    display: none !important;
}

.visNone {
    visibility: hidden;
}
/* ... */

